# sound-compressor

./: .gitignore  BEwriter.cpp  BEwriter.h  CMakeLists.txt  README.md  code_rice.cpp  code_rice.h  compressor.cpp  decoder.pth  decoder_elu.pth  decoder_linear.pth  decoder_relu.pth  distribution.py  encoder.pth  encoder_elu.pth  encoder_linear.pth  encoder_relu.pth  fbreadf.cpp  fbreadf.h  fib  fib_code.cpp  loss.py  noise.cpp  read_write_func.cpp  read_write_func.hpp  rice_code.cpp  rice_code.h
nn_model_test/: aunn.py
nn_model_test/a/: checkeval.py
